# KeyPresser

./: .gitignore  README.md  key_presser_app.spec  main.py  pyproject.toml
.github/workflows/: python-app.yml  release.yml
src/: main.py
