[tool.poetry]
name = "pressme"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.0"
tk = "^0.1.0"
pynput = "^1.7.7"
pygetwindow = "^0.0.9"
pyautogui = "^0.9.54"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.9.0"
flake8 = "^7.1.0"
black = "^24.8.0"


[tool.black]
line-length = 111

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
